# FeedbackSpiker

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  audio_process.c  audio_process.h  main.c  network.cuh
src/: CMakeLists.txt  audio_process.c  audio_process.h  main.c  network_cpu.c  network_cpu.h  network_gpu.cuh  neuron_properties.c  neuron_properties.h  spiker_network.c  spiker_network.h  spiker_network_gpu.cu  spiker_network_gpu.cuh  spiker_network_gpu.h
src/screen_utils/: array_transformer.c  array_transformer.h
src/utilities/: code_measurements.c  code_measurements.h  input_handler.c  input_handler.h  text_formatter.c  text_formatter.h
src/win_screen/: screen_framework.c  screen_framework.h
tests/: CMakeLists.txt  tests_main.c
